--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-image": "^2.2.0",
+    "react-scripts": "3.1.2",
+    "react-spinners": "^0.6.1",
+    "react-step-progress-bar": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
